--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "DEBUG=json-rules-engine ts-node index.ts",
+    "start": "ts-node index.ts",
+    "debug": "DEBUG=json-rules-engine ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
